# deepsampling

./: LICENSE  README.md
ops/: .gitignore  HowToCompileCustomOps.txt
ops/cmake/: CMakeLists.txt  createBuild.sh
src/: evaluation.py  main.py  model.py  sampler.py  setup.py
src/experiments/: experiment_fig10b.py  experiment_fig10b_deployment.py  experiment_fig8a.py  experiment_fig8b.py  experiment_fig8c.py  experiment_fig8d.py
src/loss/: .gitignore  fourier.py  pcf.py
src/utils/: ioutils.py  mathutils.py  plotutils.py  projection.py  selectgpu.py  telemetryutils.py
targets/integrand-spectra/: envmap_spectrum_512.exr  font_spectrum_128.exr  softshadows_spectrum_128.exr
targets/spectra/: bnot-powspec-d1-n1024.txt  bnot-powspec-d1-n256.txt  bnot-powspec-d1-n512.txt  bnot-powspec-d2-n1024.exr  bnot-powspec-d2-n16.exr  bnot-powspec-d2-n256.exr  bnot-powspec-d2-n4.exr  bnot-powspec-d2-n64.exr  bnot-powspec-radialmean-d10-n1024.txt  bnot-powspec-radialmean-d2-n100.txt  bnot-powspec-radialmean-d2-n1024.txt  bnot-powspec-radialmean-d2-n1024_old.txt  bnot-powspec-radialmean-d2-n1048576.txt  bnot-powspec-radialmean-d2-n128.txt  bnot-powspec-radialmean-d2-n16.txt  bnot-powspec-radialmean-d2-n16384.txt  bnot-powspec-radialmean-d2-n169.txt  bnot-powspec-radialmean-d2-n16_old.txt  bnot-powspec-radialmean-d2-n192.txt  bnot-powspec-radialmean-d2-n196.txt  bnot-powspec-radialmean-d2-n256.txt  bnot-powspec-radialmean-d2-n256_old.txt  bnot-powspec-radialmean-d2-n262144.txt  bnot-powspec-radialmean-d2-n289.txt  bnot-powspec-radialmean-d2-n320.txt  bnot-powspec-radialmean-d2-n4.txt  bnot-powspec-radialmean-d2-n400.txt  bnot-powspec-radialmean-d2-n4096.txt  bnot-powspec-radialmean-d2-n512.txt  bnot-powspec-radialmean-d2-n64.txt  bnot-powspec-radialmean-d2-n64_old.txt  bnot-powspec-radialmean-d2-n65536.txt  bnot-powspec-radialmean-d3-n1024.txt  bnot-powspec-radialmean-d3-n16.txt  (+63 more)
(+176 files in other folders)
